--- a/black1.html
+++ b/black1.html
@@ -33,7 +33,7 @@ Key to the success in Tengen opening is preparedness. Black should have a set of
 <p><mark>The best move for White to deal with Tengen is to approach it with knight's move</mark>, by placing <span class='w'>2</span> on any of the 3-4 points marked &#9651; along the third line.
 </p>
 <br>
-<div data-wgo-diagram="(;SZ[9]AB[ee]LB[ee:1]TR[dc][cd][cf][dg][fg][gf][gd][fc])" style="width: 300px">
+<div data-wgo-diagram="(;SZ[9]AB[ee]LB[ee:1]TR[dc][cd][cf][dg][fg][gf][gd][fc])" style="width: 50%">
 Your browser doesn't support WGo Player. Use some modern browser like IE9, Google Chrome or Mozilla Firefox.
 </div>
 <br><br><br><br><br><br><br><br><br><br><br><br>
