--- a/black1.html
+++ b/black1.html
@@ -27,16 +27,16 @@ See https://www.bypeople.com/css-book-layout/ for more infomation>
 		</p>
 
 <p>
-Key to the success in Tengen opening is preparedness. Black should have a set of well-tested best-move sequences in mind, prepared to deal with any <span class='w'>2</span> by having the right answers in advance. Strong players plan their strategy long before the game: <em>"If White places <span class='w'>2</span> here, I will place <Span class='b'>3</span> there, and if..., then..."</em> They also make sure the answers are right. Nowadays <mark class="green">we can validate the best opening strategy with a verified superhuman Go AI </mark>that used to be No. 1 top ranked player on GoQuest 9 &#215; 9 Go server, named <a>"A Master of Go."</a> We do not have to test it in the actual games againts top professionals.  
+Key to the success in Tengen opening is preparedness. Black should have a set of well-tested best-move sequences in mind, prepared to deal with any <span class='w'>2</span> by having the right answers in advance. Strong players plan their strategy long before the game: <em>"If White places <span class='w'>2</span> here, I will place <Span class='b'>3</span> there, and if..., then..."</em> They also make sure the answers are right. <mark class="green">We can validate the best opening strategy with verified superhuman Go AI </mark>that used to be No. 1 top ranked player on GoQuest 9 &#215; 9 Go server, named <a>"A Master of Go."</a>   
 </p>
 
 <p><mark>The best move for White to deal with Tengen is to approach it with knight's move</mark>, by placing <span class='w'>2</span> on any of the 3-4 points marked &#9651; along the third line.
 </p>
 <br>
-<div data-wgo-diagram="(;SZ[9]AB[ee]LB[ee:1]TR[dc][cd][cf][dg][fg][gf][gd][fc])" style="width: 50%">
+<div data-wgo-diagram="(;SZ[9]AB[ee]LB[ee:1]TR[dc][cd][cf][dg][fg][gf][gd][fc])" style="width: 40%">
 Your browser doesn't support WGo Player. Use some modern browser like IE9, Google Chrome or Mozilla Firefox.
 </div>
-<br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
             </article>
             <footer>
