--- a/nature.html
+++ b/nature.html
@@ -7,6 +7,10 @@ See https://www.bypeople.com/css-book-layout/ for more infomation>
 	<meta charset="UTF-8">
     	<meta http-equiv="X-UA-Compatible" content="IE=edge">
   	<link rel="stylesheet" href="css/book.css">
+	<script type="text/javascript" src="js/wgo/wgo.min.js"></script>
+	<script type="text/javascript" src="js/wgo/wgo.player.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="js/wgo/wgo.player.css" />
+
 </head>
 <div id="wrapper">
     <div id="container">
@@ -19,7 +23,7 @@ See https://www.bypeople.com/css-book-layout/ for more infomation>
             <article>
                 <h2 class="chapter-title">Nature</h2>
                 <p>
-                   We used to think that 9 &#215; 9 Go and 19 &#215; 19 Go are similar. In fact, the games are much different. Some lectures in Go may not be well applied to 9 &#215; 9 Go. For example, the usual procedure of <em>starting in the corners, extending along the sides, then moving out into the center</em> is not a good strategy at all. In 9 &#215; 9 Go, the promising areas are not classed as corners, sides, center. They are classed as the fifth, the fourth, the third, the second, and the first lines. The best opening is to start on the fourth or the fifth lines, extend on the third line, then move out onto the second line before the first line. The middle game starts once one player makes a move on the second line for the first time. The endgame begins when one player makes a move on the first line for the first time. 
+                   Go on 9 &#215; 9 board and 19 &#215; 19 board are similar, as they share the same rules. But the game strategy and tactics are somewhat different. <mark class='pink'>Some teaching on the full-sized board may not well apply to 9 &#215; 9 Go</mark>. For example, the usual procedure of <em><a>starting in the corners, extending along the sides, then moving out into the center</em> is not a good strategy at all</a>. In 9 &#215; 9 Go, the promising areas are not classed as corners, sides, center. They are classed as the fifth, the fourth, the third, the second, and the first lines. <mark class='green'>The best opening strategy is to start on the fourth or the fifth lines, extend on the third line, then move out onto the second line before the first line</mark>. The middle game starts once one player makes a move on the second line for the first time. The endgame begins when one player makes a move on the first line for the first time. 
                   
                   
 
@@ -36,14 +40,29 @@ To play 9 &#215; 9 Go better, ones must understand the nature of the game due to
 <p>
 Game results in 9 &#215 9 Go is more predictable. An opening with a single bad move can guarantee failure in a superhuman game. Moreover, game strategy must be modified at every move; adaptation is strategically crucial in 9 &#215; 9 Go, where the space and time are tiny; cause and effect are not spatially or temporally distancing.
 	
-</p>
+</p><br>
+
+<div data-wgo-diagram="(;SZ[9])" style="width: 40%"
+data-wgo-board="starPoints: {9 :[{x: 2, y: 2}, {x: 6, y: 2}, {x: 4, y: 4}, {x: 2, y: 6}, {x: 6, y: 6}]}"
+>
+Your browser doesn't support WGo Player. Use some modern browser like IE9, Google Chrome or Mozilla Firefox.
+</div>
+<br>
+<div data-wgo-diagram="(;SZ[19])" style="width: 70%"
+data-wgo-board="starPoints: {9 :[{x: 2, y: 2}, {x: 6, y: 2}, {x: 4, y: 4}, {x: 2, y: 6}, {x: 6, y: 6}]}"
+>
+Your browser doesn't support WGo Player. Use some modern browser like IE9, Google Chrome or Mozilla Firefox.
+</div>
+
+<br><br><br><br><br><br><br><br><br><br>
+
 
 
             </article>
             <footer>
                 <ol id="page-numbers">
-                    <li>10</li>
-                    <li>11</li>
+                    <li>1</li>
+                    <li>2</li>
                 </ol>
             </footer>
         </section>
