--- a/101sansan.html
+++ b/101sansan.html
@@ -35,7 +35,7 @@ See https://www.bypeople.com/css-book-layout/ for more infomation>
 <div data-wgo-diagram="(;SZ[9]AB[gc]LB[gc:1])" 
 data-wgo-board="starPoints: {9 :[{x: 2, y: 2}, {x: 6, y: 2}, {x: 4, y: 4}, {x: 2, y: 6}, {x: 6, y: 6}]}"
 data-wgo-board="background: WGo.DIR+'wood6.jpg'"
- style="width: 300px">
+ style="width: 40%">
 Your browser doesn't support WGo Player. Use some modern browser like IE9, Google Chrome or Mozilla Firefox.
 </div>
 <br><br><br><br><br><br><br><br><br><br><br><br>
