--- a/nature.html
+++ b/nature.html
@@ -44,13 +44,13 @@ Game results in 9 &#215 9 Go is more predictable. An opening with a single bad m
 
 <div data-wgo-diagram="(;SZ[9])" style="width: 40%"
 data-wgo-board="starPoints: {9 :[{x: 2, y: 2}, {x: 6, y: 2}, {x: 4, y: 4}, {x: 2, y: 6}, {x: 6, y: 6}]}"
->
+class="wgo-player-main" id="wgo_0">
 Your browser doesn't support WGo Player. Use some modern browser like IE9, Google Chrome or Mozilla Firefox.
 </div>
 <br>
 <div data-wgo-diagram="(;SZ[19])" style="width: 70%"
 data-wgo-board="starPoints: {9 :[{x: 2, y: 2}, {x: 6, y: 2}, {x: 4, y: 4}, {x: 2, y: 6}, {x: 6, y: 6}]}"
->
+class="wgo-player-main" id="wgo_0">
 Your browser doesn't support WGo Player. Use some modern browser like IE9, Google Chrome or Mozilla Firefox.
 </div>
 
