--- a/nature.html
+++ b/nature.html
@@ -41,19 +41,19 @@ To play 9 &#215; 9 Go better, ones must understand the nature of the game due to
 Game results in 9 &#215 9 Go is more predictable. An opening with a single bad move can guarantee failure in a superhuman game. Moreover, game strategy must be modified at every move; adaptation is strategically crucial in 9 &#215; 9 Go, where the space and time are tiny; cause and effect are not spatially or temporally distancing.
 	
 </p><br>
-
-<div data-wgo-diagram="(;SZ[9])" style="width: 40%"
+<p>
+<div data-wgo-diagram="(;SZ[9])" style="width: 40%; margin: 0"
 data-wgo-board="starPoints: {9 :[{x: 2, y: 2}, {x: 6, y: 2}, {x: 4, y: 4}, {x: 2, y: 6}, {x: 6, y: 6}]}"
 class="wgo-player-main" id="wgo_0">
 Your browser doesn't support WGo Player. Use some modern browser like IE9, Google Chrome or Mozilla Firefox.
 </div>
 <br>
-<div data-wgo-diagram="(;SZ[19])" style="width: 70%"
+<div data-wgo-diagram="(;SZ[19])" style="width: 70%; margin: 0"
 data-wgo-board="starPoints: {9 :[{x: 2, y: 2}, {x: 6, y: 2}, {x: 4, y: 4}, {x: 2, y: 6}, {x: 6, y: 6}]}"
 class="wgo-player-main" id="wgo_0">
 Your browser doesn't support WGo Player. Use some modern browser like IE9, Google Chrome or Mozilla Firefox.
 </div>
-
+</p>
 
 
 
