--- a/black1.html
+++ b/black1.html
@@ -9,6 +9,7 @@ See https://www.bypeople.com/css-book-layout/ for more infomation>
   	<link rel="stylesheet" href="css/book.css">
 	<script type="text/javascript" src="js/wgo/wgo.min.js"></script>
 	<script type="text/javascript" src="js/wgo/wgo.player.min.js"></script>
+	<script type="text/javascript" src="js/wgo/wgo.js"></script> 
 	<link rel="stylesheet" type="text/css" href="js/wgo/wgo.player.css" />
 
 </head>
