--- a/black1.html
+++ b/black1.html
@@ -24,17 +24,17 @@ See https://www.bypeople.com/css-book-layout/ for more infomation>
             <article>
                 <h2 class="chapter-title">Opening</h2>
                 <p>
-                   The best opening in 9 &#215; 9 Go starts by placing <span class='b'>1</span> on Tengen&mdash;the 5-5 point. Tengen is unique in that it has no mirror points and is farthest from all the corners. It is also the best move top professionals and the novice alike can play in the right place at the right time. This move implies Black is very aggressive and not interested in territorial gain at the begining. 
+                   The best opening in 9 &#215; 9 Go starts by placing <span class='b'>1</span> on Tengen&mdash;the 5-5 point (<em>Dia. 1</em>). Tengen is unique in that it has no mirror points and is farthest from all the corners. It is also the best move top professionals and the novice alike can play in the right place at the right time. This move implies Black is very aggressive and not interested in territorial gain at the begining. 
 		</p>
 
 <p>
 Key to the success in Tengen opening is preparedness. Black should have a set of well-tested best-move sequences in mind, prepared to deal with any <span class='w'>2</span> by having the right answers in advance. Strong players plan their strategy long before the game: <em>"If White places <span class='w'>2</span> here, I will place <Span class='b'>3</span> there, and if..., then..."</em> They also make sure the answers are right. <mark class="green">We can validate the best opening strategy with verified superhuman Go AI </mark>that used to be No. 1 top ranked player on GoQuest 9 &#215; 9 Go server, named <a>"A Master of Go."</a>   
 </p>
 
-<p><mark>The best move for White to deal with Tengen is to approach it with Knight's move</mark>, by placing <span class='w'>2</span> on any of the 3-4 points marked <em>a</em> to <em>h</em>; along the third line.
+<p><em>Dia. 1</em> <mark>The best move for White to deal with Tengen is to approach it with Knight's move</mark>, by placing <span class='w'>2</span> on any of the 3-4 points marked <em>a</em> to <em>h</em>; along the third line.
 </p>
 <br>
- <div id="board"></div>
+ <div id="board"></div><br><center><em>Dia. 1</em> Proper locations for White 2</center>
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
