--- a/101sansan.html
+++ b/101sansan.html
@@ -28,7 +28,7 @@ See https://www.bypeople.com/css-book-layout/ for more infomation>
 		</p>
 
 <p>
-<mark>San-san</mark> (or the 3-3 point) is a typical opening on a 9 &#215; 9 board among beginners. However, <mark class='green'>superhuman AIs and top professionals alike do not make san-san opening</mark>. A Master of Go plays san-san opening only in zero-komi game, when Black is leading since the outset of the game and there is no need of aggressive mores in the opening.
+<mark>San-san</mark> (or the 3-3 point) is a typical opening on a 9 &#215; 9 board among beginners. However, <mark class='green'>superhuman AIs and top professionals alike do not make san-san opening</mark>. A Master of Go plays san-san opening only in zero-komi game, when Black is leading since the outset of the game and there is no need of aggressive moves, surely not in the opening.
 
 </p>
 <br>
