--- a/strategy.html
+++ b/strategy.html
@@ -42,34 +42,36 @@ In fact, the <mark>objective<a>s</a> of 9 &#215 9 Go </mark>are multiple:
 </ul> 
 <br>
 <p>
-<mark class='green'>All moves should be made efficiently, without needless moves</mark>. The ultimate goal is to gain victory at the end: To have a positive final score:
+<mark class='green'>All moves should be made efficiently, without needless moves</mark>. The ultimate goal is a desire for victory: To have a positive final score (<em>B</em><sub>s</sub> > 0):
 </p><br>
 
 <p>
-<em>B<sub>s</sub></em> = <em>B<sub>t</sub></em> + <em>B<sub>p</sub></em> + <em>B</em> - <em>W<sub>t</sub></em> - <em>W<sub>p</sub></em> - <em>W</em> - <em>k</em>
+<em>B<sub>s</sub></em> = <em>B<sub>t</sub></em> + <em>B<sub>a</sub></em> + <em>W<sub>p</sub></em> + <em>W<sub>d</sub></em> - <em>W<sub>t</sub></em> - <em>W<sub>a</sub></em> -<em>B<sub>p</sub></em> -  <em>B<sub>d</sub></em> - <em>k</em>
 </p>
 
 <p><br>
-Where, <em>B<sub>s</sub></em> the net score for Black after the last move; <em>B<sub>t</sub></em> is Black's territory; <em>B<sub>p</sub></em> is white prisoner stones, <em>B</em> is black living stones on the board; <em>W<sub>t</sub></em> is White's territory; <em>W<sub>p</sub></em> is black prisoner stones; <em>W</em> is white living stones on the board;  <em>k</em> is WGA's standard komi (7 points). 
+where, <em>B<sub>s</sub></em> is Black's net score after the last move; <em>B<sub>t</sub></em> is Black's territory&mdash;number of points surrounded by Black; <em>B</em><sub>a</sub> is number of alive black-stones on the board; <em>W<sub>p</sub></em> is white prisoners&mdash;number of white stones captured by Black;  <em>W<sub>d</sub></em> is number of dead white stones on the board; <em>W<sub>t</sub></em> is White's territory&mdash;number of points surrounded by White; <em>W</em><sub>a</sub> is number of alive white-stones on the board; <em>B<sub>p</sub></em> is black prisoners&mdash;number of black stones captured by Black; <em>B<sub>d</sub></em> is number of dead black stones on the board;  <em>k</em> is standard komi size (<em>e.g.</em>, 7 points). 
 <br>
 <p>
-Any moves has an impact on the final score, and has some effects that are not intended, and often not even foreseen. You can control the game if you know what will be the consequence of each move and it turns out to be as intended.
+Hence, each move has its impact on the final score, and has some effects that are not intended, and often not even foreseen. You can control the game if you know what will be the actual consequence of each move.
 </p>
 <p>
-That is possible if you know the true meaning behind each move, both yours and the opponents. A classic approach is to review quality games&mdash;the games played by top 9 dan professional players.
+That is possible if you know the true meaning behind each move of yours and the opponent's. A classic way to know it is to use intuition or experience from review of quality games&mdash;the games by top 9 dan professional Go players.
 </p>
 
 <p>
-The better, modern approach is to review the superhuman games, in which you can see how and why the top superhuman AI makes each move like that in actual superhuman-vs-human games. For example,
+The better approach is to use experience from superhuman reviews, in which you can see how and why the top superhuman AI makes each move like that in actual superhuman-vs-human games. For example,
 </p>
-
+<p>
 <br>
-<strong>Problem 1.</strong> Why is <span class='b'>1</span> on Tengen the best first move? 
+<strong>Problem 1.</strong> Why is Tengen, <span class='b'>1</span>, the best first move? 
+</p>
 <br><br>
-<div data-wgo-diagram="(;SZ[9]AB[ee]LB[ee:1])" style="width: 40%; margin: 0">
+<!--
+<!div data-wgo-diagram="(;SZ[9]AB[ee]LB[ee:1])" style="width: 40%; margin: 0">
 Your browser doesn't support WGo Player. Use some modern browser like IE9, Google Chrome or Mozilla Firefox.
 </div>   
-
+-->
   	
 </p>
 
