--- a/notation.html
+++ b/notation.html
@@ -45,7 +45,7 @@ See https://www.bypeople.com/css-book-layout/ for more infomation>
 </ul>  
 		</p>
 <br>
-<p>For example, in <em>Dia. 1</em>, Black places <span class='b'>1</span> on Tengen. White answers with Knight's move approach at <span class='w'>2</span>. Then, a standard opening pattern is Black A, White B, Black C. Making the next move at <span class='b'>&#x2715;</span> is due to the wrong click. Normally, we do not make a move on the first line at the opening, but it may look creative and interest the novice who cannot distinguish between bad and good moves. Back to the event after Black C. Both players want to occupy at &#x2715;. But now, it is White's turn; he should make the next move at &#x2715; to secure the bottom left corner, to attack <span class='b'>1</span>, and to get ready to invade the large empty area in the top right corner, where there is enough eye spaces.
+<p>For example, in <em>Dia. 1</em>, Black places <span class='b'>1</span> on Tengen. White answers with Knight's move approach at <span class='w'>2</span>. Then, a standard opening pattern is Black A, White B, Black C. Making the next move at <span class='b'>&#x2715;</span> is due to the wrong click. Normally, we do not make a move on the first line at the opening, but it may look creative and interest the novice who cannot distinguish between bad and good moves. Let's consider the event after Black C. Both players want to occupy at &#x2715; the same. But now, it is White's turn; he should make the next move at &#x2715; to secure the bottom left corner, to attack <span class='b'>1</span>, and to get ready to invade the large empty area in the top right corner, where there is enough eye spaces.
 </p>
 <br>
  <div id="board"></div><br><center><em>Dia. 1</em> 9 &#215; 9 Go</center>
