--- a/contents.html
+++ b/contents.html
@@ -21,15 +21,15 @@
                
 <ol class="toc-list" role="list">
     <li>
-        <a href="#Introduction">
+        <a href="preface.html">
             <span class="title">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PREFACE<span class="leaders" aria-hidden="true"></span></span> <span
                 data-href="#Introduction" class="page"><span class="visually-hidden">Page&nbsp;</span>i</span>
         </a>
       </li>
    <li>
-        <a href="#Introduction">
+        <a href="#">
             <span class="title">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CONTENTS<span class="leaders" aria-hidden="true"></span></span> <span
-                data-href="#Introduction" class="page"><span class="visually-hidden">Page&nbsp;</span>iii</span>
+                data-href="#" class="page"><span class="visually-hidden">Page&nbsp;</span>iii</span>
         </a>
       </li>
 
@@ -39,41 +39,41 @@
 </center><br>
 
     <li>
-        <a href="#Promise-Basics">
+        <a href="fundamental.html">
             <span class="title">1. Fundamental Concepts<span class="leaders" aria-hidden="true"></span></span>
-            <span data-href="#Promise-Basics" class="page"><span class="visually-hidden">Page&nbsp;</span><span class='b'>1</span></span>
+            <span data-href="fundamental.html" class="page"><span class="visually-hidden">Page&nbsp;</span><span class='b'>1</span></span>
         </a>
         <ol role="list">
 
             <li>
-                <a href="#Promise-Basics-The-Promise-Lifecycle">
+                <a href="rules.html">
                     <span class="title">The Rules<span class="leaders" aria-hidden="true"></span></span>
-                    <span data-href="#Promise-Basics-The-Promise-Lifecycle" class="page"><span
+                    <span data-href="rules.html" class="page"><span
                             class="visually-hidden">Page&nbsp;</span>1</span>
                 </a>
             </li>
 
             <li>
-                <a href="#Promise-Basics-Creating-New-Unsettled-Promises">
+                <a href="notation.html">
                     <span class="title">Notations<span class="leaders"
                             aria-hidden="true"></span></span> <span
-                        data-href="#Promise-Basics-Creating-New-Unsettled-Promises" class="page"><span
+                        data-href="notation.html" class="page"><span
                             class="visually-hidden">Page&nbsp;</span>3</span>
                 </a>
             </li>
 
             <li>
-                <a href="#Promise-Basics-Creating-Settled-Promises">
+                <a href="nature.html">
                     <span class="title">The Nature<span class="leaders" aria-hidden="true"></span></span>
-                    <span data-href="#Promise-Basics-Creating-Settled-Promises" class="page"><span
+                    <span data-href="nature.html" class="page"><span
                             class="visually-hidden">Page&nbsp;</span>5</span>
                 </a>
             </li>
 
             <li>
-                <a href="#Promise-Basics-Summary">
+                <a href="strategy.html">
                     <span class="title">Meta-Strategy<span class="leaders" aria-hidden="true"></span></span> <span
-                        data-href="#Promise-Basics-Summary" class="page"><span
+                        data-href="strategy.html" class="page"><span
                             class="visually-hidden">Page&nbsp;</span>7</span>
                 </a>
             </li>
@@ -306,7 +306,7 @@
 
             <li>
                 <a href="#Final-Thoughts-Support-the-Author">
-                    <span class="title">Support the Author<span class="leaders" aria-hidden="true"></span></span> <span
+                    <span class="title">About the Author<span class="leaders" aria-hidden="true"></span></span> <span
                         data-href="#Final-Thoughts-Support-the-Author" class="page"><span
                             class="visually-hidden">Page&nbsp;</span>103</span>
                 </a>
