--- a/icover.html
+++ b/icover.html
@@ -42,7 +42,7 @@ License: <a href='https://9x9go.github.io/superhuman/#credits--licenses'>https:/
 
 <br><br><br>
 
-<center><em>"The key to moving is not assessing how much a move is going the affect the board, but rather evaluating the <mark>strategic advantage</mark> of any given move and, above all, the <mark>durability</mark> of that advantage."</em></center>
+<center><em>"The key to moving is not assessing how much a move is going the affect the board, but rather evaluating the strategic advantage of any given move and, above all, the durability of that advantage."</em></center>
 
 <p align='right'>&mdash;The Intelligent Player</p>    
 </font>
