--- a/icover.html
+++ b/icover.html
@@ -12,340 +12,48 @@
     <div id="container">
 
         <section class="open-book">
-            <header>
-                <h1>The Art of 9 &#215 9 Go</h1>
-                <h6>Superhuman Edition</h6>
-            </header>
             <article>
-                <h2 class="chapter-title">Contents*</h2></article>
-               
-<ol class="toc-list" role="list">
-    <li>
-        <a href="preface.html">
-            <span class="title">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PREFACE<span class="leaders" aria-hidden="true"></span></span> <span
-                data-href="#Introduction" class="page"><span class="visually-hidden">Page&nbsp;</span>i</span>
-        </a>
-      </li>
-   <li>
-        <a href="#">
-            <span class="title">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CONTENTS<span class="leaders" aria-hidden="true"></span></span> <span
-                data-href="#" class="page"><span class="visually-hidden">Page&nbsp;</span>iii</span>
-        </a>
-      </li>
 
-<br><br>
-<center><span class='part'style='letter-spacing:5px'>PART ONE<br></span>
-<strong><em>An Introduction to 9 &#215; 9 Go</em></strong><br><br><span class='w'>&#x25B3</span>
-</center><br>
+<span class='part'style='letter-spacing:5px'>THE ART OF 9 &#215; 9 G0<br></span>
+<em>Superhuman Edition</em><br><br><br>
 
-    <li>
-        <a href="fundamental.html">
-            <span class="title">1. Fundamental Concepts<span class="leaders" aria-hidden="true"></span></span>
-            <span data-href="fundamental.html" class="page"><span class="visually-hidden">Page&nbsp;</span><span class='b'>1</span></span>
-        </a>
-        <ol role="list">
 
-            <li>
-                <a href="rules.html">
-                    <span class="title">The Rules<span class="leaders" aria-hidden="true"></span></span>
-                    <span data-href="rules.html" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>1</span>
-                </a>
-            </li>
+by<br>
+<strong>Monteo da Westi &<br>
+A Master of Go</strong>
 
-            <li>
-                <a href="notation.html">
-                    <span class="title">Notations<span class="leaders"
-                            aria-hidden="true"></span></span> <span
-                        data-href="notation.html" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>3</span>
-                </a>
-            </li>
+<br><br><br>
+Published by<br> 
+The World Go Academy<br>
+9 x 9 Go Repository<br>
+<a href='https://9x9go.github.io/superhuman'>https://9x9go.github.io/superhuman</a>
 
-            <li>
-                <a href="nature.html">
-                    <span class="title">The Nature<span class="leaders" aria-hidden="true"></span></span>
-                    <span data-href="nature.html" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>5</span>
-                </a>
-            </li>
+<br><br><br><font size='-1'>
+Copyright &copy; 2023 Monteo da Westi<br>
+All rights reserved. No part of this work may be reproduced,
+distributed, or transmitted in any form or by any means, including photocopying, recording, 
+or other electronic or mechanical methods, without the prior written permission of 
+the first author. For permission requests, write to monteodawesti@gmail.com <br><br>
 
-            <li>
-                <a href="strategy.html">
-                    <span class="title">Meta-Strategy<span class="leaders" aria-hidden="true"></span></span> <span
-                        data-href="strategy.html" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>7</span>
-                </a>
-            </li>
+License: <a href='https://9x9go.github.io/superhuman/#credits--licenses'>https://www.github.io/9x9go/superhuman</a>
 
-        </ol>
-    </li>
-    <li>
-        <a href="#Chaining-Promises">
-            <span class="title">2. The Opeining<span class="leaders" aria-hidden="true"></span></span>
-            <span data-href="#Chaining-Promises" class="page"><span class="visually-hidden">Page&nbsp;</span><span class='b'>9</span></span>
-        </a>
-        <ol role="list">
 
-            <li>
-                <a href="#Chaining-Promises-Catching-Errors">
-                    <span class="title">Unusual Moves<span class="leaders" aria-hidden="true"></span></span> <span
-                        data-href="#Chaining-Promises-Catching-Errors" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>11</span>
-                </a>
-            </li>
+ <h2 class="chapter-title">WGA</h2>
 
-            <li>
-                <a href="#Chaining-Promises-Using-finally-in-Promise-Chains">
-                    <span class="title">San-san<span class="leaders"
-                            aria-hidden="true"></span></span> <span
-                        data-href="#Chaining-Promises-Using-finally-in-Promise-Chains" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>13</span>
-                </a>
-            </li>
+<br><br><br>
 
-            <li>
-                <a href="#Chaining-Promises-Returning-Values-in-Promise-Chains">
-                    <span class="title">Komoku<span class="leaders"
-                            aria-hidden="true"></span></span> <span
-                        data-href="#Chaining-Promises-Returning-Values-in-Promise-Chains" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>15</span>
-                </a>
-            </li>
+<center><em>"The key to moving is not assessing how much a move is going the affect the board, but rather evaluating the strategic advantage of any given move and, above all, the durability of that advantage."</em></center>
 
-            <li>
-                <a href="#Chaining-Promises-Returning-Promises-in-Promise-Chains">
-                    <span class="title">Mokuhazushi<span class="leaders"
-                            aria-hidden="true"></span></span> <span
-                        data-href="#Chaining-Promises-Returning-Promises-in-Promise-Chains" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>17</span>
-                </a>
-            </li>
-
-            <li>
-                <a href="#Chaining-Promises-Summary">
-                    <span class="title">Takamoku<span class="leaders" aria-hidden="true"></span></span> <span
-                        data-href="#Chaining-Promises-Summary" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>19</span>
-                </a>
-            </li>
-          <li>
-                <a href="#Chaining-Promises-Summary">
-                    <span class="title">Hoshi<span class="leaders" aria-hidden="true"></span></span> <span
-                        data-href="#Chaining-Promises-Summary" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>21</span>
-                </a>
-            </li>
-          <li>
-                <a href="#Chaining-Promises-Summary">
-                    <span class="title">Tengen<span class="leaders" aria-hidden="true"></span></span> <span
-                        data-href="#Chaining-Promises-Summary" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>23</span>
-                </a>
-            </li>
-
-        </ol>
-    </li>
-    <li>
-        <a href="#Working-with-Multiple-Promises">
-            <span class="title">3. Basic Strategy and Tactics<span class="leaders" aria-hidden="true"></span></span>
-            <span data-href="#Working-with-Multiple-Promises" class="page"><span
-                    class="visually-hidden">Page&nbsp;</span><Span class='b'>25</span></span>
-        </a>
-        <ol role="list">
-
-            <li>
-                <a href="#Working-with-Multiple-Promises-The-Promiseall-Method">
-                    <span class="title">Installation<span class="leaders" aria-hidden="true"></span></span>
-                    <span data-href="#Working-with-Multiple-Promises-The-Promiseall-Method" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>27</span>
-                </a>
-            </li>
-
-            <li>
-                <a href="#Working-with-Multiple-Promises-The-PromiseallSettled-Method">
-                    <span class="title">Extension<span class="leaders"
-                            aria-hidden="true"></span></span> <span
-                        data-href="#Working-with-Multiple-Promises-The-PromiseallSettled-Method" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>29</span>
-                </a>
-            </li>
-
-            <li>
-                <a href="#Working-with-Multiple-Promises-The-Promiserace-Method">
-                    <span class="title">Approach<span class="leaders" aria-hidden="true"></span></span>
-                    <span data-href="#Working-with-Multiple-Promises-The-Promiserace-Method" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>31</span>
-                </a>
-            </li>
-
-            <li>
-                <a href="#Working-with-Multiple-Promises-Summary">
-                    <span class="title">Invasion<span class="leaders" aria-hidden="true"></span></span> <span
-                        data-href="#Working-with-Multiple-Promises-Summary" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>33</span>
-                </a>
-            </li>
-          <li>
-                <a href="#Working-with-Multiple-Promises-Summary">
-                    <span class="title">Operation<span class="leaders" aria-hidden="true"></span></span> <span
-                        data-href="#Working-with-Multiple-Promises-Summary" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>35</span>
-                </a>
-            </li>
-          <li>
-                <a href="#Working-with-Multiple-Promises-Summary">
-                    <span class="title">Killing<span class="leaders" aria-hidden="true"></span></span> <span
-                        data-href="#Working-with-Multiple-Promises-Summary" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>37</span>
-                </a>
-            </li>
-        </ol>
-    </li>
-
-<br><br>
-<center><span class='part'style='letter-spacing:5px'>PART TWO<br></span>
-<strong><em>The Principles of 9 &#215; 9 Go</em></strong><br><br><span class='w'>&#x25B3</span>
-</center><br>
-
-    <li>
-        <a href="#Async-Functions-and-Await-Expressions">
-            <span class="title">4. The Elements of 9 &#215; 9 Go<span class="leaders"
-                    aria-hidden="true"></span></span>
-            <span data-href="#Async-Functions-and-Await-Expressions" class="page"><span
-                    class="visually-hidden">Page&nbsp;</span><span class='b'>41</span></span>
-        </a>
-        <ol role="list">
-
-            <li>
-                <a href="#Async-Functions-and-Await-Expressions-Defining-Async-Functions">
-                    <span class="title">Board Reading<span class="leaders" aria-hidden="true"></span></span>
-                    <span data-href="#Async-Functions-and-Await-Expressions-Defining-Async-Functions" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>43</span>
-                </a>
-            </li>
-
-            <li>
-                <a href="#Async-Functions-and-Await-Expressions-What-Makes-Async-Functions-Different">
-                    <span class="title">Visualization<span class="leaders"
-                            aria-hidden="true"></span></span> <span
-                        data-href="#Async-Functions-and-Await-Expressions-What-Makes-Async-Functions-Different"
-                        class="page"><span class="visually-hidden">Page&nbsp;</span>45</span>
-                </a>
-            </li>
-
-            <li>
-                <a href="#Async-Functions-and-Await-Expressions-Summary">
-                    <span class="title">Evaluation<span class="leaders" aria-hidden="true"></span></span> <span
-                        data-href="#Async-Functions-and-Await-Expressions-Summary" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>47</span>
-                </a>
-            </li>
-            <li>
-                <a href="#Async-Functions-and-Await-Expressions-Summary">
-                    <span class="title">Relearning<span class="leaders" aria-hidden="true"></span></span> <span
-                        data-href="#Async-Functions-and-Await-Expressions-Summary" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>49</span>
-                </a>
-            </li>
-
-        </ol>
-    </li>
-    <li>
-        <a href="#Unhandled-Rejection-Tracking">
-            <span class="title">5. Superhuman Review<span class="leaders" aria-hidden="true"></span></span>
-            <span data-href="#Unhandled-Rejection-Tracking" class="page"><span
-                    class="visually-hidden">Page&nbsp;</span><Span class='b'>51</span></span>
-        </a>
-        <ol role="list">
-
-            <li>
-                <a href="#Unhandled-Rejection-Tracking-Detecting-Unhandled-Rejections">
-                    <span class="title">The Verified Superhuman AIs<span class="leaders"
-                            aria-hidden="true"></span></span> <span
-                        data-href="#Unhandled-Rejection-Tracking-Detecting-Unhandled-Rejections" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>53</span>
-                </a>
-            </li>
-
-            <li>
-                <a href="#Unhandled-Rejection-Tracking-Web-Browser-Unhandled-Rejection-Tracking">
-                    <span class="title">Go Seigen and Ma Xioachun<span class="leaders"
-                            aria-hidden="true"></span></span> <span
-                        data-href="#Unhandled-Rejection-Tracking-Web-Browser-Unhandled-Rejection-Tracking"
-                        class="page"><span class="visually-hidden">Page&nbsp;</span>63</span>
-                </a>
-            </li>
-
-            <li>
-                <a href="#Unhandled-Rejection-Tracking-Nodejs-Unhandled-Rejection-Tracking">
-                    <span class="title">Cho Chikun and Cho Hunyun<span class="leaders"
-                            aria-hidden="true"></span></span> <span
-                        data-href="#Unhandled-Rejection-Tracking-Nodejs-Unhandled-Rejection-Tracking" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>73</span>
-                </a>
-            </li>
-
-            <li>
-                <a href="#Unhandled-Rejection-Tracking-Summary">
-                    <span class="title">Satoshi Yuki and Yuta Iyama<span class="leaders" aria-hidden="true"></span></span> <span
-                        data-href="#Unhandled-Rejection-Tracking-Summary" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>83</span>
-                </a>
-            </li>
-         <li>
-                <a href="#Unhandled-Rejection-Tracking-Summary">
-                    <span class="title">KataTest the Invincible<span class="leaders" aria-hidden="true"></span></span> <span
-                        data-href="#Unhandled-Rejection-Tracking-Summary" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>93</span>
-                </a>
-            </li>
-
-        </ol>
-    </li>
-    <li>
-        <a href="#Final-Thoughts">
-            <span class="title">Final Thoughts<span class="leaders" aria-hidden="true"></span></span>
-            <span data-href="#Final-Thoughts" class="page"><span class="visually-hidden">Page&nbsp;</span><span class='b'>99</span></span>
-        </a>
-        <ol role="list">
-
-            <li>
-                <a href="#Final-Thoughts-Download-the-Extras">
-                    <span class="title">Repository<span class="leaders" aria-hidden="true"></span></span> <span
-                        data-href="#Final-Thoughts-Download-the-Extras" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>101</span>
-                </a>
-            </li>
-
-            <li>
-                <a href="#Final-Thoughts-Support-the-Author">
-                    <span class="title">About the Author<span class="leaders" aria-hidden="true"></span></span> <span
-                        data-href="#Final-Thoughts-Support-the-Author" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>103</span>
-                </a>
-            </li>
-
-            <li>
-                <a href="#Final-Thoughts-Help-and-Support">
-                    <span class="title">Credits and Licenses<span class="leaders" aria-hidden="true"></span></span> <span
-                        data-href="#Final-Thoughts-Help-and-Support" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>105</span>
-                </a>
-            </li>
-
-            <li>
-                <a href="#Final-Thoughts-Follow-the-Author">
-                    <span class="title">Scientific Updates<span class="leaders" aria-hidden="true"></span></span> <span
-                        data-href="#Final-Thoughts-Follow-the-Author" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>107</span>
-                </a>
-            </li>
-
-        </ol>
-    </li>
-</ol>
-<sup>*The contents is tentative and subject to change.</sup>
+<p align='right'>&mdash;The Intelligent Player</p>    
+</font>
+<br>
+<br>
+<p>
+<sup>Click the text below to see Contents.</a>
+<br><br><p align='center'><a href='contents.html'>[Contents]</a></p>
+</p>
+ <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+</article>
 <!---------------next page-->
             <footer>
                 <ol id="page-numbers">
