--- a/contents.html
+++ b/contents.html
@@ -82,14 +82,14 @@
     </li>
     <li>
         <a href="#Chaining-Promises">
-            <span class="title">2. Elementary Principles<span class="leaders" aria-hidden="true"></span></span>
+            <span class="title">2. The Opeining<span class="leaders" aria-hidden="true"></span></span>
             <span data-href="#Chaining-Promises" class="page"><span class="visually-hidden">Page&nbsp;</span><span class='b'>9</span></span>
         </a>
         <ol role="list">
 
             <li>
                 <a href="#Chaining-Promises-Catching-Errors">
-                    <span class="title">The Opening<span class="leaders" aria-hidden="true"></span></span> <span
+                    <span class="title">Unusual Moves<span class="leaders" aria-hidden="true"></span></span> <span
                         data-href="#Chaining-Promises-Catching-Errors" class="page"><span
                             class="visually-hidden">Page&nbsp;</span>11</span>
                 </a>
@@ -148,7 +148,7 @@
     </li>
     <li>
         <a href="#Working-with-Multiple-Promises">
-            <span class="title">3. Strategy and Tactics<span class="leaders" aria-hidden="true"></span></span>
+            <span class="title">3. Basic Strategy and Tactics<span class="leaders" aria-hidden="true"></span></span>
             <span data-href="#Working-with-Multiple-Promises" class="page"><span
                     class="visually-hidden">Page&nbsp;</span><Span class='b'>25</span></span>
         </a>
@@ -156,7 +156,7 @@
 
             <li>
                 <a href="#Working-with-Multiple-Promises-The-Promiseall-Method">
-                    <span class="title">Base<span class="leaders" aria-hidden="true"></span></span>
+                    <span class="title">Installation<span class="leaders" aria-hidden="true"></span></span>
                     <span data-href="#Working-with-Multiple-Promises-The-Promiseall-Method" class="page"><span
                             class="visually-hidden">Page&nbsp;</span>27</span>
                 </a>
@@ -188,7 +188,7 @@
             </li>
           <li>
                 <a href="#Working-with-Multiple-Promises-Summary">
-                    <span class="title">Battle<span class="leaders" aria-hidden="true"></span></span> <span
+                    <span class="title">Operation<span class="leaders" aria-hidden="true"></span></span> <span
                         data-href="#Working-with-Multiple-Promises-Summary" class="page"><span
                             class="visually-hidden">Page&nbsp;</span>35</span>
                 </a>
@@ -236,9 +236,16 @@
 
             <li>
                 <a href="#Async-Functions-and-Await-Expressions-Summary">
-                    <span class="title">Evaluation and Selection<span class="leaders" aria-hidden="true"></span></span> <span
+                    <span class="title">Evaluation<span class="leaders" aria-hidden="true"></span></span> <span
                         data-href="#Async-Functions-and-Await-Expressions-Summary" class="page"><span
                             class="visually-hidden">Page&nbsp;</span>47</span>
+                </a>
+            </li>
+            <li>
+                <a href="#Async-Functions-and-Await-Expressions-Summary">
+                    <span class="title">Relearning<span class="leaders" aria-hidden="true"></span></span> <span
+                        data-href="#Async-Functions-and-Await-Expressions-Summary" class="page"><span
+                            class="visually-hidden">Page&nbsp;</span>49</span>
                 </a>
             </li>
 
@@ -248,7 +255,7 @@
         <a href="#Unhandled-Rejection-Tracking">
             <span class="title">5. Superhuman Review<span class="leaders" aria-hidden="true"></span></span>
             <span data-href="#Unhandled-Rejection-Tracking" class="page"><span
-                    class="visually-hidden">Page&nbsp;</span><Span class='b'>49</span></span>
+                    class="visually-hidden">Page&nbsp;</span><Span class='b'>51</span></span>
         </a>
         <ol role="list">
 
@@ -257,7 +264,7 @@
                     <span class="title">The Verified Superhuman AIs<span class="leaders"
                             aria-hidden="true"></span></span> <span
                         data-href="#Unhandled-Rejection-Tracking-Detecting-Unhandled-Rejections" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>51</span>
+                            class="visually-hidden">Page&nbsp;</span>53</span>
                 </a>
             </li>
 
@@ -266,7 +273,7 @@
                     <span class="title">Go Seigen and Ma Xioachun<span class="leaders"
                             aria-hidden="true"></span></span> <span
                         data-href="#Unhandled-Rejection-Tracking-Web-Browser-Unhandled-Rejection-Tracking"
-                        class="page"><span class="visually-hidden">Page&nbsp;</span>53</span>
+                        class="page"><span class="visually-hidden">Page&nbsp;</span>63</span>
                 </a>
             </li>
 
@@ -284,6 +291,13 @@
                     <span class="title">Satoshi Yuki and Yuta Iyama<span class="leaders" aria-hidden="true"></span></span> <span
                         data-href="#Unhandled-Rejection-Tracking-Summary" class="page"><span
                             class="visually-hidden">Page&nbsp;</span>83</span>
+                </a>
+            </li>
+         <li>
+                <a href="#Unhandled-Rejection-Tracking-Summary">
+                    <span class="title">KataTest the Invincible<span class="leaders" aria-hidden="true"></span></span> <span
+                        data-href="#Unhandled-Rejection-Tracking-Summary" class="page"><span
+                            class="visually-hidden">Page&nbsp;</span>93</span>
                 </a>
             </li>
 
@@ -331,7 +345,7 @@
         </ol>
     </li>
 </ol>
-* <em>The contents is tentative and subject to change.</em>
+<sup>*The contents is tentative and subject to change.</sup>
 <!---------------next page-->
             <footer>
                 <ol id="page-numbers">
