--- a/icover.html
+++ b/icover.html
@@ -28,7 +28,7 @@ The World Go Academy<br>
 9 x 9 Go Repository<br>
 <a href='https://9x9go.github.io/superhuman'>https://9x9go.github.io/superhuman</a>
 
-<br><br><br><font size='-1'>
+<br><br><br><br><br><br><br><br><br><font size='-1'>
 Copyright &copy; 2023 Monteo da Westi<br>
 All rights reserved. No part of this work may be reproduced,
 distributed, or transmitted in any form or by any means, including photocopying, recording, 
