--- a/notation.html
+++ b/notation.html
@@ -23,7 +23,7 @@ See https://www.bypeople.com/css-book-layout/ for more infomation>
             <article>
                 <h2 class="chapter-title">Notations</h2>
                 <p>
-                   The text and diagrams in this book were annotated with notation under the WGA's 9 &#215; 9 Go review convention:
+                   The text and diagrams in this book were annotated with the following notations:
 <ul style='list-style:none'>
 <li><span class='b'></span> = black stone</li>
 <li><span class='w'></span> = white stone</li>
