--- a/contents.html
+++ b/contents.html
@@ -96,10 +96,10 @@
             </li>
 
             <li>
-                <a href="#Chaining-Promises-Using-finally-in-Promise-Chains">
+                <a href="101sansan.html">
                     <span class="title">San-san<span class="leaders"
                             aria-hidden="true"></span></span> <span
-                        data-href="#Chaining-Promises-Using-finally-in-Promise-Chains" class="page"><span
+                        data-href="101sansan.html" class="page"><span
                             class="visually-hidden">Page&nbsp;</span>13</span>
                 </a>
             </li>
