--- a/rules.html
+++ b/rules.html
@@ -33,7 +33,7 @@ Both players must not make illegal moves, and should avoid bad ones. Ideally, <m
 </p>
 
 <p>
-Knowing Go rules is not enough to get strong at Go but essential. All top players are learners, but not all learner are top players. The best way to know Go rules is to play your first 50 games on GoQuest 9 &#215; 9 Go server or at home against standard Go bots, such as IgoWin and Crazy Stones. To know the principles of 9 &#215; 9 Go, you need a stronger Go playing and teaching program, such as  A Master of Go. You need to know the <a href='nature.html'>nature of the game</a>.
+Knowing Go rules is not enough to get strong at Go but essential. All top players are learners, but not all learners are top players. The best way to know Go rules is to play your first 50 games on GoQuest 9 &#215; 9 Go server or at home against standard Go bots, such as IgoWin and Crazy Stones. To know the principles of 9 &#215; 9 Go, you need a stronger Go playing and teaching program, such as  A Master of Go. You need to know the <a href='nature.html'>nature of the game</a>.
 </p>
 <br>
 
