--- a/contents.html
+++ b/contents.html
@@ -335,10 +335,10 @@
             </li>
 
             <li>
-                <a href="#Final-Thoughts-Follow-the-Author">
-                    <span class="title">Scientific Updates<span class="leaders" aria-hidden="true"></span></span> <span
-                        data-href="#Final-Thoughts-Follow-the-Author" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>107</span>
+                <a href="sfgToWgo.html">
+                    <span class="title">Convert SGF to WGo Object<span class="leaders" aria-hidden="true"></span></span> <span
+                        data-href="sfgToWgo.html" class="page"><span
+                            class="visually-hidden">Page&nbsp;</span>109</span>
                 </a>
             </li>
 
