--- a/sfgToWgo.html
+++ b/sfgToWgo.html
@@ -22,10 +22,10 @@
                 <h2 class="chapter-title">Convert SGF to WGo Object</h2>
             
 <p>
-This chapter provides a tool for converting an SGF code to the input code for use in the <em>"board.addObject([...])"</em> command in the wgo.js file. It faciliates the coding of WGo board to display in the &lt;div id='board'&gt; tag. 
+This chapter provides a tool for converting an SGF code into the object input of the <em>"board.addObject([...])"</em> command in the wgo.js file, to faciliate the display of WGo board in the &lt;div id='board'&gt; tag. 
 </p>
 <p>
-<mark class='pink'><strong>WARNING:</strong> An error will occur if the same marks appear on two or more points on the board</mark>. In that case, <mark class='green'>you need a prior data cleansing.</mark> For example, MA[ee][dd] should be coded as MA[ee]MA[dd] before entering as the SGF input.  
+<mark class='pink'><strong>WARNING:</strong> An error will occur if the same marks appear on two or more points on the board</mark>. In that case, <mark class='green'>you need a proper data cleansing at the outset.</mark> For example, MA[ee][dd] should be changed into MA[ee]MA[dd] before entering as the SGF input.  
 </p>
 
 <br><br><br>
