--- a/sfgToWgo.html
+++ b/sfgToWgo.html
@@ -19,13 +19,13 @@
                 <h6>Superhuman Edition</h6>
             </header>
             <article>
-                <h2 class="chapter-title">Convert SGF to WGo Object</h2>
+                <h2 class="chapter-title">The Conversion of SGF to WGo Object</h2>
             
 <p>
-This chapter provides a tool for converting an SGF code into the object input of the <em>"board.addObject([...])"</em> command in the wgo.js file, to faciliate the display of WGo board in the &lt;div id='board'&gt; tag. 
+This chapter provides a tool for converting an SGF code into the object input of the <em>"board.addObject([...])"</em> command in the wgo.js file, to make it easier for coding the WGo board in the &lt;div id='board'&gt; tag. 
 </p>
 <p>
-<mark class='pink'><strong>WARNING:</strong> An error will occur if the same marks appear on two or more points on the board</mark>. In that case, <mark class='green'>you need a proper data cleansing at the outset.</mark> For example, MA[ee][dd] should be changed into MA[ee]MA[dd] before entering as the SGF input.  
+<mark class='pink'><strong>WARNING:</strong> An error will occur if the same marks appear on two or more points on the board</mark>. In that case, <mark class='green'>you need a proper data cleansing at the outset.</mark> For example, MA[ee][dd] should be changed into MA[ee]MA[dd] before entering as the SGF input. Besides, in all cases, all else in the original SGF code (<em>e.g.</em>, game information and comments) must be deleted.  
 </p>
 
 <br><br><br>
