--- a/contents.html
+++ b/contents.html
@@ -200,6 +200,14 @@
                             class="visually-hidden">Page&nbsp;</span>37</span>
                 </a>
             </li>
+		          <li>
+                <a href="spa.html">
+                    <span class="title">Divine Move<span class="leaders" aria-hidden="true"></span></span> <span
+                        data-href="spa.html" class="page"><span
+                            class="visually-hidden">Page&nbsp;</span>37</span>
+                </a>
+            </li>
+
         </ol>
     </li>
 
