--- a/icover.html
+++ b/icover.html
@@ -36,20 +36,19 @@ or other electronic or mechanical methods, without the prior written permission 
 the first author. For permission requests, write to monteodawesti@gmail.com <br><br>
 
 License: <a href='https://9x9go.github.io/superhuman/#credits--licenses'>https://www.github.io/9x9go/superhuman</a>
+   
+</font>
 
 
  <h2 class="chapter-title">WGA</h2>
 
 <br><br><br>
 
-<center><em>"The key to moving is not assessing how much a move is going the affect the board, but rather evaluating the strategic advantage of any given move and, above all, the durability of that advantage."</em></center>
-
-<p align='right'>&mdash;The Intelligent Player</p>    
-</font>
+<center><em>"To Dad"</em></center>
 <br>
 <br>
 <p>
-<sup>Click the text below to see Contents.</a>
+<sup>Click.</a>
 <br><br><p align='center'><a href='contents.html'>[Contents]</a></p>
 </p>
  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
