--- a/contents.html
+++ b/contents.html
@@ -200,11 +200,11 @@
                             class="visually-hidden">Page&nbsp;</span>37</span>
                 </a>
             </li>
-		          <li>
-                <a href="spa.html">
+		<li>
+                <a href="SPA.html">
                     <span class="title">Divine Move<span class="leaders" aria-hidden="true"></span></span> <span
-                        data-href="spa.html" class="page"><span
-                            class="visually-hidden">Page&nbsp;</span>37</span>
+                        data-href="SPA.html" class="page"><span
+                            class="visually-hidden">Page&nbsp;</span>39</span>
                 </a>
             </li>
 
@@ -353,7 +353,7 @@
         </ol>
     </li>
 </ol>
-<sup>*The contents is tentative and subject to change.</sup>
+<sup>*The contents is tentative.</sup>
 <!---------------next page-->
             <footer>
                 <ol id="page-numbers">
