--- a/contents.html
+++ b/contents.html
@@ -17,7 +17,7 @@
                 <h6>Superhuman Edition</h6>
             </header>
             <article>
-                <h2 class="chapter-title">Contents*</h2></article>
+                <h2 class="chapter-title">Contents</h2></article>
                
 <ol class="toc-list" role="list">
     <li>
@@ -353,7 +353,7 @@
         </ol>
     </li>
 </ol>
-<sup>*The contents is tentative.</sup>
+
 <!---------------next page-->
             <footer>
                 <ol id="page-numbers">
