--- a/SPA.html
+++ b/SPA.html
@@ -22,10 +22,10 @@
                 <h2 class="chapter-title">Divine Moves</h2>
             
 <p>
-Go players normally make each move the best they can. However, any move can become bad, good, or the best ones. Nowadays, the quality of go move can also be identified as human, superhuman, and divine moves, by assessing the move quality in terms of <em>move strength</em>.  
+Go players normally make a move they think is best. However, the move can actually be bad, good, or best. The quality of go move can also be identified as human, superhuman, and divine moves, by assessing the move quality in terms of <em>move strength</em>.  
 </p>
 
-<p><a>Move strength</a> represents the immediate impact of a move on the opponent's score, assuming the next move is best played by a verified superhuman Go player&mdash;an oustanding AlphaZero-like AI that can defeat other Go AIs that are themselves superhuman and has already achieved No. 1 top ranked player on a well-known human 9 &#215; 9 Go server. If the impact of move A is lower than that of the verified AI's best move (B), then move A is a human move. If move A's impact is equal to that of the verified AI's move, then move A is a superhuman move. If the impact is gerater, then it is a divine move.  
+<p><a>The move strength</a> represents the magnitude of immediate impact from one's move on the opponent's score given the next move is best played by a verified superhuman Go player&mdash;an oustanding AlphaZero-like AI that can defeat other Go AIs that are themselves superhuman, and has already achieved No. 1 top ranked player on an international human 9 &#215; 9 Go server. For example, if the impact of move A on the opponent's score is lower than that of the verified AI's best move at &#x274c;, then move A is a human move. If move A's impact is equal to that of the verified AI's move, then move A is a superhuman move. If the impact is gerater, then it is a divine move.  
 </p>
 
 <p>
